--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
     "react-scripts": "^3.4.0",
+    "semantic-ui-react": "^2.1.2",
     "twilio-video": "^2.20.1"
   },
   "scripts": {
