--- a/package.json
+++ b/package.json
@@ -3,11 +3,14 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "react": "^16.9.0",
+    "html2canvas": "^1.4.1",
+    "react": "^16.14.0",
     "react-dom": "^16.9.0",
     "react-scripts": "^3.4.0",
+    "react-webcam": "^6.0.1",
     "semantic-ui-react": "^2.1.2",
-    "twilio-video": "^2.20.1"
+    "twilio-video": "^2.20.1",
+    "use-react-screenshot": "^3.0.0"
   },
   "scripts": {
     "start": "react-scripts --openssl-legacy-provider start",
