--- a/package.json
+++ b/package.json
@@ -3,9 +3,15 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@material-ui/core": "^4.12.3",
+    "@material-ui/lab": "^4.0.0-alpha.60",
+    "@mui/material": "^5.4.3",
+    "firebase": "^9.6.7",
     "html2canvas": "^1.4.1",
     "react": "^16.14.0",
+    "react-axios": "^2.0.5",
     "react-dom": "^16.9.0",
+    "react-fade-in": "^2.0.1",
     "react-scripts": "^3.4.0",
     "react-webcam": "^6.0.1",
     "semantic-ui-react": "^2.1.2",
