--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@material-ui/core": "^4.12.3",
     "@material-ui/lab": "^4.0.0-alpha.60",
     "@mui/material": "^5.4.3",
+    "axios": "^0.26.0",
     "firebase": "^9.6.7",
     "html2canvas": "^1.4.1",
     "react": "^16.14.0",
@@ -19,7 +20,7 @@
     "use-react-screenshot": "^3.0.0"
   },
   "scripts": {
-    "start": "react-scripts --openssl-legacy-provider start",
+    "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
